--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -14,25 +14,12 @@ jobs:
             - name: Set up Docker Buildx
               uses: docker/setup-buildx-action@v3
 
-            - name: Login to Docker Hub
-              uses: docker/login-action@v3
-              with:
-                  username: ${{ secrets.DOCKERHUB_USERNAME }}
-                  password: ${{ secrets.DOCKERHUB_TOKEN }}
-
             - name: Build and test with Docker Compose
               run: |
                   docker compose -f docker-compose.test.yml build
                   docker compose -f docker-compose.test.yml up -d
                   docker compose -f docker-compose.test.yml exec -T web pytest
                   docker compose -f docker-compose.test.yml down
-
-            - name: Save test results
-              if: always()
-              uses: actions/upload-artifact@v4
-              with:
-                  name: test-results
-                  path: test-results/
 
     deploy:
         needs: test
@@ -42,24 +29,24 @@ jobs:
         steps:
             - uses: actions/checkout@v4
 
-            - name: Set up Docker Buildx
-              uses: docker/setup-buildx-action@v3
-
-            - name: Login to Docker Hub
-              uses: docker/login-action@v3
+            - name: Deploy to Droplet
+              uses: appleboy/ssh-action@master
               with:
-                  username: ${{ secrets.DOCKERHUB_USERNAME }}
-                  password: ${{ secrets.DOCKERHUB_TOKEN }}
+                  host: ${{ secrets.DROPLET_IP }}
+                  username: root
+                  password: ${{ secrets.DROPLET_PASSWORD }}
+                  script: |
+                      # Navigate to project directory
+                      cd /home/swe/5-final-proj5-febv
 
-            - name: Build and push Docker images
-              run: |
-                  docker compose build
-                  docker compose push
+                      # Pull latest code
+                      git pull origin main
 
-            - name: Trigger production deployment
-              run: |
-                  curl -X POST ${{ secrets.PRODUCTION_WEBHOOK_URL }} \
-                    -H "Authorization: Bearer ${{ secrets.PRODUCTION_DEPLOY_TOKEN }}" \
-                    -H "Content-Type: application/json" \
-                    -d '{"ref": "${{ github.ref }}", "sha": "${{ github.sha }}"}' \
-                    --fail
+                      # Stop and remove existing containers
+                      docker compose down
+
+                      # Build and start new containers
+                      docker compose up -d --build
+
+                      # Clean up unused images
+                      docker image prune -f
