--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -14,6 +14,11 @@ jobs:
             - name: Set up Docker Buildx
               uses: docker/setup-buildx-action@v3
 
+            - name: Create .env from secrets
+              run: |
+                echo "OPENAI_API_KEY=${{ secrets.OPENAI_API_KEY }}" >> .env
+                echo "YOUTUBE_API_KEY=${{ secrets.YOUTUBE_API_KEY }}" >> .env
+
             - name: Build and test with Docker Compose
               run: |
                   docker compose build
