--- a/.github/workflows/open-ai.yml
+++ b/.github/workflows/open-ai.yml
@@ -22,10 +22,10 @@ jobs:
 
       - name: Build and test with Docker Compose
         run: |
-          docker compose -f docker-compose.yml build
-          docker compose -f docker-compose.yml up -d
-          docker compose -f docker-compose.yml exec openai pytest
-          docker compose -f docker-compose.yml down
+          docker compose build
+          docker compose up -d
+          docker compose exec openai pytest
+          docker compose down
 
   deploy:
     needs: test-open-ai
