--- a/.github/workflows/web-app.yml
+++ b/.github/workflows/web-app.yml
@@ -33,6 +33,12 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
+      - name: Push Docker image to Docker Hub
+        run: |
+          docker login -u ${{ secrets.DOCKERHUB_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
+          docker tag open-ai_openai ${{ secrets.DOCKERHUB_USERNAME }}/open-ai:latest
+          docker push ${{ secrets.DOCKERHUB_USERNAME }}/open-ai:latest
+
       - name: Deploy to Droplet
         uses: appleboy/ssh-action@master
         with:
