--- a/.github/workflows/web-app.yml
+++ b/.github/workflows/web-app.yml
@@ -5,58 +5,58 @@ on:
         branches: [main]
 
 jobs:
-  test-web-app:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
+    test-web-app:
+        runs-on: ubuntu-latest
+        steps:
+            - uses: actions/checkout@v4
 
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
-      
-      - name: Create .env from secrets
-        run: |
-          echo "OPENAI_API_KEY=${{ secrets.OPENAI_API_KEY }}" >> .env
-          echo "YOUTUBE_API_KEY=${{ secrets.YOUTUBE_API_KEY }}" >> .env
+            - name: Set up Docker Buildx
+              uses: docker/setup-buildx-action@v3
 
-      - name: Build and test with Docker Compose
-        run: |
-          docker compose build
-          docker compose up -d
-          docker compose exec web pytest
-          docker compose down
-  
-  deploy:
-    needs: test-web-app
-    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
-    runs-on: ubuntu-latest
-    timeout-minutes: 15
-    steps:
-      - uses: actions/checkout@v4
+            - name: Create .env from secrets
+              run: |
+                  echo "OPENAI_API_KEY=${{ secrets.OPENAI_API_KEY }}" >> .env
+                  echo "YOUTUBE_API_KEY=${{ secrets.YOUTUBE_API_KEY }}" >> .env
 
-      - name: Push Docker image to Docker Hub
-        run: |
-          docker login -u ${{ secrets.DOCKERHUB_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
-          docker tag open-ai_openai ${{ secrets.DOCKERHUB_USERNAME }}/open-ai:latest
-          docker push ${{ secrets.DOCKERHUB_USERNAME }}/open-ai:latest
+            - name: Build and test with Docker Compose
+              run: |
+                  docker compose build
+                  docker compose up -d
+                  docker compose exec web pytest
+                  docker compose down
 
-      - name: Deploy to Droplet
-        uses: appleboy/ssh-action@master
-        with:
-          host: ${{ secrets.DROPLET_IP }}
-          username: root
-          password: ${{ secrets.DROPLET_PASSWORD }}
-          script: |
-              # Navigate to project directory
-              cd /home/swe/5-final-proj5-febv
+    deploy:
+        needs: test-web-app
+        if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+        runs-on: ubuntu-latest
+        timeout-minutes: 15
+        steps:
+            - uses: actions/checkout@v4
 
-              # Pull latest code
-              git pull origin main
+            - name: Push Docker image to Docker Hub
+              run: |
+                  docker login -u "${{ secrets.DOCKERHUB_USERNAME }}" --password-stdin
+                  docker tag 5-final-proj5-febv-web ${{ secrets.DOCKERHUB_USERNAME }}/web-app:latest
+                  docker push ${{ secrets.DOCKERHUB_USERNAME }}/web-app:latest
 
-              # Stop and remove existing containers
-              docker compose down
+            - name: Deploy to Droplet
+              uses: appleboy/ssh-action@master
+              with:
+                  host: ${{ secrets.DROPLET_IP }}
+                  username: root
+                  password: ${{ secrets.DROPLET_PASSWORD }}
+                  script: |
+                      # Navigate to project directory
+                      cd /home/swe/5-final-proj5-febv
 
-              # Build and start new containers
-              docker compose up -d --build
+                      # Pull latest code
+                      git pull origin main
 
-              # Clean up unused images
-              docker image prune -f
+                      # Stop and remove existing containers
+                      docker compose down
+
+                      # Build and start new containers
+                      docker compose up -d --build
+
+                      # Clean up unused images
+                      docker image prune -f
