--- a/.github/workflows/open-ai.yml
+++ b/.github/workflows/open-ai.yml
@@ -2,7 +2,7 @@ name: Open AI Subsystem CI/CD
 on:
     pull_request:
     push:
-        branches: [main]
+        branches: [main, fix-ci-cd]
 
 jobs:
     test-open-ai:
