--- a/.github/workflows/open-ai.yml
+++ b/.github/workflows/open-ai.yml
@@ -26,7 +26,7 @@ jobs:
 
     deploy:
         needs: test-open-ai
-        if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+        if: github.event_name == 'push'
         runs-on: ubuntu-latest
         timeout-minutes: 15
         steps:
