--- a/.github/workflows/open-ai.yml
+++ b/.github/workflows/open-ai.yml
@@ -13,9 +13,10 @@ jobs:
             - name: Set up Docker Buildx
               uses: docker/setup-buildx-action@v3
 
-            - name: Create .env from secrets
+            - name: Create .env file
               run: |
-                  echo "OPENAI_API_KEY=${{ secrets.OPENAI_API_KEY }}" >> .env
+                  echo "OPENAI_API_KEY=${{ secrets.OPENAI_API_KEY }}" > .env
+                  echo "MONGO_URI=mongodb://mongodb:27017" >> .env
 
             - name: Build and test with Docker Compose
               run: |
@@ -31,6 +32,11 @@ jobs:
         timeout-minutes: 15
         steps:
             - uses: actions/checkout@v4
+
+            - name: Create .env file
+              run: |
+                  echo "OPENAI_API_KEY=${{ secrets.OPENAI_API_KEY }}" > .env
+                  echo "MONGO_URI=mongodb://mongodb:27017" >> .env
 
             - name: Build and push Docker image
               run: |
@@ -48,6 +54,10 @@ jobs:
                   script: |
                       # Login to Docker Hub
                       echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKERHUB_USERNAME }}" --password-stdin
+
+                      # Create .env file
+                      echo "OPENAI_API_KEY=${{ secrets.OPENAI_API_KEY }}" > .env
+                      echo "MONGO_URI=mongodb://mongodb:27017" >> .env
 
                       # Stop and remove existing containers
                       docker compose down
