--- a/.github/workflows/web-app.yml
+++ b/.github/workflows/web-app.yml
@@ -13,10 +13,13 @@ jobs:
             - name: Set up Docker Buildx
               uses: docker/setup-buildx-action@v3
 
-            - name: Create .env from secrets
+            - name: Create .env file
               run: |
-                  echo "OPENAI_API_KEY=${{ secrets.OPENAI_API_KEY }}" >> .env
+                  echo "OPENAI_API_KEY=${{ secrets.OPENAI_API_KEY }}" > .env
                   echo "YOUTUBE_API_KEY=${{ secrets.YOUTUBE_API_KEY }}" >> .env
+                  echo "MONGO_URI=mongodb://mongodb:27017" >> .env
+                  echo "FLASK_ENV=development" >> .env
+                  echo "OPENAI_SERVICE_URL=http://open-ai:8000" >> .env
 
             - name: Build and test with Docker Compose
               run: |
@@ -32,6 +35,14 @@ jobs:
         timeout-minutes: 15
         steps:
             - uses: actions/checkout@v4
+
+            - name: Create .env file
+              run: |
+                  echo "OPENAI_API_KEY=${{ secrets.OPENAI_API_KEY }}" > .env
+                  echo "YOUTUBE_API_KEY=${{ secrets.YOUTUBE_API_KEY }}" >> .env
+                  echo "MONGO_URI=mongodb://mongodb:27017" >> .env
+                  echo "FLASK_ENV=development" >> .env
+                  echo "OPENAI_SERVICE_URL=http://open-ai:8000" >> .env
 
             - name: Build and push Docker image
               run: |
@@ -49,6 +60,13 @@ jobs:
                   script: |
                       # Login to Docker Hub
                       echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKERHUB_USERNAME }}" --password-stdin
+
+                      # Create .env file
+                      echo "OPENAI_API_KEY=${{ secrets.OPENAI_API_KEY }}" > .env
+                      echo "YOUTUBE_API_KEY=${{ secrets.YOUTUBE_API_KEY }}" >> .env
+                      echo "MONGO_URI=mongodb://mongodb:27017" >> .env
+                      echo "FLASK_ENV=development" >> .env
+                      echo "OPENAI_SERVICE_URL=http://open-ai:8000" >> .env
 
                       # Stop and remove existing containers
                       docker compose down
