--- a/.github/workflows/web-app.yml
+++ b/.github/workflows/web-app.yml
@@ -30,7 +30,7 @@ jobs:
 
     deploy:
         needs: test-web-app
-        if: github.event_name == 'push'
+        if: github.event_name == 'push' && github.ref == 'refs/heads/main'
         runs-on: ubuntu-latest
         timeout-minutes: 15
         steps:
