--- a/.github/workflows/web-app.yml
+++ b/.github/workflows/web-app.yml
@@ -30,7 +30,7 @@ jobs:
 
     deploy:
         needs: test-web-app
-        if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+        if: github.event_name == 'push'
         runs-on: ubuntu-latest
         timeout-minutes: 15
         steps:
@@ -67,6 +67,46 @@ jobs:
                       echo "MONGO_URI=mongodb://mongodb:27017" >> .env
                       echo "FLASK_ENV=development" >> .env
                       echo "OPENAI_SERVICE_URL=http://open-ai:8000" >> .env
+
+                      # Copy docker-compose.yml
+                      cat > docker-compose.yml << 'EOL'
+                      services:
+                          web:
+                              image: ${{ secrets.DOCKERHUB_USERNAME }}/web-app:latest
+                              ports:
+                                  - "5002:5002"
+                              depends_on:
+                                  - mongodb
+                                  - open-ai
+                              env_file:
+                                  - .env
+                              environment:
+                                  - FLASK_ENV=development
+                                  - OPENAI_SERVICE_URL=http://open-ai:8000
+
+                          mongodb:
+                              image: mongo
+                              container_name: mongodb
+                              ports:
+                                  - "27017:27017"
+                              volumes:
+                                  - mongo-data:/data/db
+
+                          open-ai:
+                              image: ${{ secrets.DOCKERHUB_USERNAME }}/open-ai:latest
+                              ports:
+                                  - "8000:8000"
+                              container_name: open-ai
+                              depends_on:
+                                  - mongodb
+                              env_file:
+                                  - .env
+                              environment:
+                                  - MONGO_URI=mongodb://mongodb:27017
+
+                      volumes:
+                          mongo-data:
+                      EOL
 
                       # Stop and remove existing containers
                       docker compose down
